FSPA-164 missed title in custmers navigation bar

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -31,7 +31,7 @@
         <form-navigation 
           *ngIf="selectedCustomer"
           sticky
-          [title]="Customer"
+          [title]="'Customer'"
           [anchors]="anchors"
           class="sticked-form-navigation">
         </form-navigation>
