--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
@@ -1,2 +1,6 @@
 @import '../../../../assets/styles/variables';
 @import '../../../../assets/styles/form-control';
+
+.commodity-item {
+  background-color: $white;
+}
