--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="commodityForm">
   <div class="c-row">
       <input class="c-col"
-        *ngFor="let field of fields; let i = index"
+        *ngFor="let field of visibleFields(_fields); let i = index; trackBy:trackByIndex"
         [attr.index]="i"
         [formControlName]="field.name"
         [type]="field.type"
