--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
@@ -1,4 +1,4 @@
-<commodities-header [titles]='titles' [fucsedColumnIndex]='focusedCol'></commodities-header>
+<commodities-header [titles]='titles' [focusedColumnIndex]='focusedCol'></commodities-header>
 <pickup-commodity
   class='commodity-item'
   *ngFor="let data of renderFormData; let i = index; trackBy:commodityTrackBy"
