FSPA-138 #comment fixed issue with typeahead dropdown items

--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -14,6 +14,7 @@
       [typeahead]="source"
       [collapsibleInput]="true"
       [labelText]="labelText"
+      (blurEmitter)="blurEmitter($event)"
       placeholder="{{placeholder}}"
       [typeaheadItemTemplate]="itemTemplate"
       [typeaheadFooterTemplate]="footerButtonText == '' ? null : footerTemplate"
