--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -27,7 +27,7 @@
     </second-pane>
 
     <third-pane>
-      <div class="sticked-items-section">
+      <div>
         <form-navigation 
           *ngIf="selectedCustomer"
           sticky
