--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,6 +1,6 @@
 <bd-form-expand (changed)="onExpandChanged($event)" [viewMode]="viewMode">
 	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)">
-		<navigation-anchor id="customer-basic-information" [class.not-scrollable]="!scrollable"></navigation-anchor>
+		<navigation-anchor id="customer-basic-information" [class.not-scrollable]="isNestedForm"></navigation-anchor>
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
 			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 			</bd-input>
@@ -23,18 +23,20 @@
 		<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
 			<contacts-form [formArray]='customerForm.controls.contacts' [addresses]='customer.addresses' [items]='customer.contacts' [viewMode]="viewMode"></contacts-form>
 		</bd-form-section>
-		<div class="button-group" sticky [top]="false" [scrollable]="scrollable" *ngIf="isEditMode">
-			<bd-button
-				(click)="onCancel()"
-				[text]="'Cancel'"
-				class="button">
-			</bd-button>
-			<bd-button
-				type="submit"
-				color="primary"
-				class="button"
-				[text]="submitButtonText">
-			</bd-button>
-		</div>
+		<form-sticky-bottom-container [sticky]="!isNestedForm" *ngIf="isEditMode">
+			<div class="button-group">
+				<bd-button
+					(click)="onCancel()"
+					[text]="'Cancel'"
+					class="button">
+				</bd-button>
+				<bd-button
+					type="submit"
+					color="primary"
+					class="button"
+					[text]="submitButtonText">
+				</bd-button>
+			</div>
+		</form-sticky-bottom-container>
 	</form>
 </bd-form-expand>
