--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,7 +1,6 @@
 @import './variables';
 
 .button-group {
-  z-index: 2;
   display: flex;
   width: 100%;
   min-height: $form-control-height;
@@ -16,13 +15,9 @@
   }
 }
 
-.sticked-items-section {
-  display: block;
-  padding-bottom: calc(#{$form-control-height} + #{$default-margin});
-}
-
 .sticked-form-navigation {
-  z-index: 2;
+  position: absolute;
+  z-index: $sticked-z-index;
   top: 0;
   display: block;
   width: 100%;
