--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -65,4 +65,8 @@ $form-control-height: 50px;
 /* form navigation */
 $form-navigation-height: 91px;
 
+/* */
 $default-margin: 17px;
+
+/* zIndexes */
+$sticked-z-index: 100;
