--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,6 +1,6 @@
 <bd-form-expand (changed)="onExpandChanged($event)" [viewMode]="viewMode">
 	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)">
-		<navigation-anchor id="customer-basic-information" [class.not-scrollable]="isNestedForm"></navigation-anchor>
+		<navigation-anchor id="customer-basic-information" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
 			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 			</bd-input>
@@ -15,11 +15,11 @@
 			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
 			</bd-input>
 		</bd-form-section>
-		<navigation-anchor id="customer-addresses"></navigation-anchor>
+		<navigation-anchor id="customer-addresses" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
 			<addresses-form [formArray]='customerForm.controls.addresses' (update)="onAddressChange($event)" (remove)="onAddressRemove($event)" (add)="onAddressAdd($event)"  [items]='customer.addresses' [viewMode]="viewMode"></addresses-form>
 		</bd-form-section>
-		<navigation-anchor id="customer-contacts"></navigation-anchor>
+		<navigation-anchor id="customer-contacts" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
 			<contacts-form [formArray]='customerForm.controls.contacts' [addresses]='customer.addresses' [items]='customer.contacts' [viewMode]="viewMode"></contacts-form>
 		</bd-form-section>
