FSPA-164 move from navigation bar`s style in component

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -32,8 +32,7 @@
           *ngIf="selectedCustomer"
           sticky
           [title]="'Customer'"
-          [anchors]="anchors"
-          class="sticked-form-navigation">
+          [anchors]="anchors">
         </form-navigation>
         <customer-form
           *ngIf="selectedCustomer"
