--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,4 +1,4 @@
-<form-navigation [title]="'Load'" [anchors]="anchors" class="sticked-form-navigation"></form-navigation>
+<form-navigation [title]="'Load'" [anchors]="anchors"></form-navigation>
 <template #customItemTemplate let-model="item" let-index="index">
     <div class="dropdown-customer-item-wrapper">
       <div class="full-properties-wrapper">
