--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -2,82 +2,92 @@
 
 $container-height: 43px;
 
-.form-navigation {
-  padding: 10px 17px 0;
-  background-color: $white;
+form-navigation {
+  position: absolute;
+  z-index: $sticked-z-index;
+  top: 0;
+  display: block;
+  width: 100%;
+  min-height: $form-navigation-height;
+  max-height: $form-navigation-height;
 
-  .title {
-    font-size: $large-font-size;
-    font-weight: bold;
-  }
+  .form-navigation {
+    padding: 10px 17px 0;
+    background-color: $white;
 
-  .container {
-    position: relative;
-    width: 100%;
-    height: $container-height;
-    padding: 0;
-  }
+    .title {
+      font-size: $large-font-size;
+      font-weight: bold;
+    }
 
-  .content {
-    white-space: nowrap;
+    .container {
+      position: relative;
+      width: 100%;
+      height: $container-height;
+      padding: 0;
+    }
 
-    span {
-      margin: 0 5px;
-      color: $dark-grey;
-      font-size: $small-font-size;
-      cursor: default;
+    .content {
+      white-space: nowrap;
 
-      &:hover {
-        color: $black;
+      span {
+        margin: 0 5px;
+        color: $dark-grey;
+        font-size: $small-font-size;
+        cursor: default;
+
+        &:hover {
+          color: $black;
+        }
+
+        &.active {
+          color: $black;
+          font-weight: bold;
+        }
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+
       }
-
-      &.active {
-        color: $black;
-        font-weight: bold;
-      }
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-
     }
   }
-}
 
-//sass-lint:disable no-important
-.ps-active-x {
-  &.ps-in-scrolling  {
-    .ps-scrollbar-x-rail {
+  //sass-lint:disable no-important
+  .ps-active-x {
+    &.ps-in-scrolling  {
+      .ps-scrollbar-x-rail {
+        .ps-scrollbar-x {
+          height: 5px !important;
+          bottom: -2px !important;
+        } 
+      }
+    }
+
+    &>.ps-scrollbar-x-rail {
+      display: flex !important;
+      height: 1px !important;
+      opacity: 1 !important;
+      background-color: $grey !important;
+      align-items: center;
+      bottom: 11px !important;
+
       .ps-scrollbar-x {
-        height: 5px !important;
-        bottom: -2px !important;
-      } 
-    }
-  }
+        height: 3px !important;
+        background-color: $blue !important;
+        bottom: -1px !important;
+        transition: none !important;
 
-  &>.ps-scrollbar-x-rail {
-    display: flex !important;
-    height: 1px !important;
-    opacity: 1 !important;
-    background-color: $grey !important;
-    align-items: center;
-    bottom: 11px !important;
-
-    .ps-scrollbar-x {
-      height: 3px !important;
-      background-color: $blue !important;
-      bottom: -1px !important;
-      transition: none !important;
-
-      &:hover {
-        height: 5px !important;
-        bottom: -2px !important;
+        &:hover {
+          height: 5px !important;
+          bottom: -2px !important;
+        }
       }
     }
   }
+  //sass-lint:enable no-important
 }
-//sass-lint:enable no-important
