--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -5,6 +5,7 @@
      [class.bd-not-empty-label]="isEmptyLabel"
 >
         <div class="bd-label"
+             (mousedown)="checkLabel($event)"
              [class.bd-hidden-label]="!isEmptyLabel">
           <label
             class="bd-input-placeholder"
