FSPA-169 #comment remove odd code, code refactoring

--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -5,7 +5,7 @@
      [class.bd-not-empty-label]="isEmptyLabel"
 >
         <div class="bd-label"
-             (mousedown)="checkLabel($event)"
+             (mousedown)="labelClick($event)"
              [class.bd-hidden-label]="!isEmptyLabel">
           <label
             class="bd-input-placeholder"
