FSPA-168 fix menu active styles, fix navigation panel refreshing

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -27,6 +27,9 @@
   </second-pane>
 
   <third-pane>
-    <load-form *ngIf="selectedItem" (save)="onItemSave($event)" (cancel)="onItemCancel($event)" [load]="selectedItem" [viewMode]="viewMode"></load-form>
+    <div *ngIf="selectedItem">
+      <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
+      <load-form (save)="onItemSave($event)" (cancel)="onItemCancel($event)" [load]="selectedItem" [viewMode]="viewMode"></load-form>
+    </div>
   </third-pane>
 </multi-pane-layout>
