FPSA-168 fix customer view mode

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -36,7 +36,7 @@
         <customer-form
           [scrollable]="true"
           [customer]="selectedItem"
-          [viewMode]="customerViewMode"
+          [viewMode]="viewMode"
           (save)="onItemSave($event)"
           (cancel)="onItemCancel()">
         </customer-form>
