--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -27,9 +27,6 @@
   </second-pane>
 
   <third-pane>
-    <div *ngIf="selectedItem">
-      <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
-      <load-form (save)="onItemSave($event)" (cancel)="onItemCancel($event)" [load]="selectedItem" [viewMode]="viewMode"></load-form>
-    </div>
+    <router-outlet></router-outlet>
   </third-pane>
 </multi-pane-layout>
