FSPA-183 #comment code refactoring

--- a/src/app/loads/components/card/card.component.html
+++ b/src/app/loads/components/card/card.component.html
@@ -1,10 +1,10 @@
-<div class="list-items-wrapper">
-  <div class="load-number-customer-id-wrapper">
+<div class="list-section">
+  <div class="left">
     <span class="load-number">LD123456</span>
     <span class="customer-name">CH Robinson</span>
     <span>1234567</span>
   </div>
-  <div class="distance-schedule-date-wrapper">
+  <div class="right">
     <div class="distance-wrapper">
       <span>Laredo, TX</span>
       <span>San-Francisco, CA</span>
@@ -21,21 +21,17 @@
       </div>
     </div>
   </div>
-  <div class="driver-track-trailer-number-current-trip-status-wrapper">
-    <div class="driver-track-trailer-number-wrapper">
-      <span>Govind</span>
-      <span>|</span>
-      <span>Tk1021</span>
-      <span>|</span>
-      <span>Tk1021</span>
-    </div>
-    <div class="current-trip-status-wrapper">
-      <span class="current-trip">
+  <div class="bottom">
+    <span class="link">Govind</span>
+    <span class="link">|</span>
+    <span class="link">Tk1021</span>
+    <span class="link">|</span>
+    <span class="link">TI2349</span>
+    <span class="current-trip">
       TR349616
     </span>
-      <span class="status">
+    <span class="status">
         status
     </span>
-    </div>
   </div>
 </div>
