--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -13,7 +13,7 @@
           <swui-datatable #datatable class='material striped' [rows]='items' [columns]="columns" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [selectionType]="'single'" (select)='onSelect($event)' [limit]="10">
           </swui-datatable>
         </div>
-        <list *ngSwitchCase="2"></list>
+        <card *ngSwitchCase="2"></card>
       </div>
     </div>
   </first-pane>
