FSPA-168 fix: subitem`s title size must be lower than item`s one

--- a/src/app/navigation-bar/components/menu-item/menu-item.component.scss
+++ b/src/app/navigation-bar/components/menu-item/menu-item.component.scss
@@ -48,6 +48,7 @@ $sub-munu-color: #a4a9af;
         position: relative;
         padding: 0;
         color: $sub-munu-color;
+        font-size: 14px;
         background-color: $sub-munu-background-color;
       }
     }
