--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -1,9 +1,8 @@
 <form [formGroup]="formGroup">
-  <bd-input
+  <bd-form-datepicker
     class="bd-form-control"
-    placeholder="Date"
-    formControlName="date">
-  </bd-input>
+  >
+  </bd-form-datepicker>
   <pick-up-commodity-form
     [formArray]="formGroup.controls.commodities"
     (update)="onCommodityUpdate($event)"
