FSPA-187 #comment added TR prefix

--- a/src/app/loads/components/card/card.component.html
+++ b/src/app/loads/components/card/card.component.html
@@ -28,7 +28,7 @@
     <span class="link">|</span>
     <span class="link">TI{{load.currentTrip.trailerNumber}}</span>
     <span class="current-trip">
-      {{load.currentTrip.number}}
+      TR{{load.currentTrip.number}}
     </span>
     <span class="status" [style.background]="loadStatusColor">
         {{loadStatusText}}
