--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -9,7 +9,7 @@
         <div *ngSwitchCase="1">
           <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
           </bd-button>
-          <swui-datatable #datatable class='material striped' [rows]='items' [columns]="columns" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [selectionType]="'single'" (select)='onSelect($event)' [limit]="10">
+          <swui-datatable class='material striped' [selected]="selected" [rows]='items' [columns]="columns" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [selectionType]="'single'" (select)='onSelect($event)' [limit]="10">
           </swui-datatable>
         </div>
         <load-stops [loads]="loads" *ngSwitchCase="2"></load-stops>
