FSPA-187 show load on stop card click

--- a/src/app/loads/components/card/card.component.html
+++ b/src/app/loads/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="list-section">
+<div class="list-section" (click)="onClick()">
   <div class="left">
     <span class="load-number">LD{{load.carrierLoadNumber}}</span>
     <span class="customer-name">{{load.customer.name}}</span>
