FSPA-187 add Date entity to stop model

--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -1,23 +1,23 @@
-<div class="list-section" (click)="onClick()">
+<div class="load-stop-card-section" (click)="onClick()">
   <div class="left">
     <span class="load-number">LD{{load.carrierLoadNumber}}</span>
     <span class="customer-name">{{load.customer.name}}</span>
     <span>{{load.brokerLoadNumber}}</span>
   </div>
-  <div class="right" *ngIf="this.load.stops.length">
+  <div class="right" *ngIf="this.load.stops.length > 1">
     <div class="distance-wrapper">
       <span>{{firstStop.address.city}}, {{firstStop.address.state}}</span>
       <span>{{lastStop.address.city}}, {{lastStop.address.state}}</span>
     </div>
     <div class="schedule-date-wrapper">
       <div class="start-date">
-        {{firstStop.date}}
+        {{firstStop.date | date:'MM/dd'}}
       </div>
       <div class="schedule">
         <stops-line [stops]="load.stops"></stops-line>
       </div>
       <div class="end-date">
-        {{lastStop.date}}
+        {{lastStop.date | date:'MM/dd'}}
       </div>
     </div>
   </div>
