--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../assets/styles/variables';
 
-.list-section {
+.load-stop-card-section {
   height: 100px;
   padding: 17px;
   background: $white;
