FSPA-105 properly added datepicker project

--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
@@ -1,2 +1,2 @@
 
-    <ngb-datepicker  [(ngModel)]="model"></ngb-datepicker>
+<bd-input [placeholder]="datePlaceholder" ngbDatepicker (focusChange)="onFocusChange($event)" #datepicker="ngbDatepicker"></bd-input>
