--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="formGroup">
   <bd-form-datepicker
     class="bd-form-control"
+    formControlName="date"
   >
   </bd-form-datepicker>
   <pick-up-commodity-form
