--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -99,6 +99,6 @@
     </second-pane>
 
     <third-pane>
-
+      <form ngNoForm action="http://localhost:5000/upload" target="_blank" method="POST" enctype="multipart/form-data"> <input type="file" name="fileupload" value="fileupload" id="fileupload"> <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> </form>
     </third-pane>
 </multi-pane-layout>
