FSPA-187 implement active/hover states on card

--- a/src/app/loads/components/load-stop-cards/load-stop-cards.component.html
+++ b/src/app/loads/components/load-stop-cards/load-stop-cards.component.html
@@ -1,1 +1,1 @@
-<load-stop-card [load]='load' (select)="onCardSelect($event)" *ngFor='let load of this.loads'></load-stop-card>
+<load-stop-card [class.active]="selectedIds.includes(load.id)" [load]='load' (select)="onCardSelect($event)" *ngFor='let load of this.loads'></load-stop-card>
