--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -1,9 +1,24 @@
 @import '../../../../assets/styles/variables';
 
+:host {
+  background: $white;
+
+  &.active,
+  &:hover {
+    background: $light-blue;
+  }
+
+  &.active {
+    .load-stop-card-section {
+      border-bottom-color: $blue;
+    }
+  }
+}
+
 .load-stop-card-section {
   height: 100px;
   padding: 17px;
-  background: $white;
+  background: inherit;
   font-size: $tiny-font-size;
   border-bottom: $border;
 
