FSPA-187 change cusror style

--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -20,6 +20,7 @@
   padding: 17px;
   background: inherit;
   font-size: $tiny-font-size;
+  cursor: pointer;
   border-bottom: $border;
 
   .left {
