FSPA-194 #comment fixed datepicker styles

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,15 @@
             [items]="items">
         </bd-dropdown>
         </div>
+        <bd-dropdown
+            [defaultLabelText]="'contact'"
+            [labelText]="'contact'"
+            [defaultTitleText]="'Select Contact'"
+            [dropdownHeaderTemplate]="dropdownHeaderTemplate"
+            [dropdownFooterTemplate]="dropdownFooterTemplate"
+            [dropdownItemTemplate]="dropdownItemTemplate"
+            [items]="items">
+        </bd-dropdown>
         <swui-datatable
           class="material striped"
           [rows]="rows"
