--- a/src/app/shared/components/datepicker/styles/datepicker-navigation.scss
+++ b/src/app/shared/components/datepicker/styles/datepicker-navigation.scss
@@ -10,13 +10,13 @@
 
   .arrow-left {
     height: 30px;
-    background: url(../../../../../assets/img/arrow-left.svg) no-repeat;
+    background: url('../../../../../assets/img/arrow-left.svg') no-repeat;
     margin-left: 17px;
   }
 
   .arrow-right {
     height: 30px;
-    background: url(../../../../../assets/img/arrow-right.svg) no-repeat;
+    background: url('../../../../../assets/img/arrow-right.svg') no-repeat;
     float: right;
     margin-right: 17px;
    }
