--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -9,7 +9,7 @@
         <div *ngSwitchCase="1">
           <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
           </bd-button>
-          <swui-datatable 
+          <ngx-datatable
             class='material striped'
             [selected]="selected"
             [rows]='items'
@@ -21,7 +21,7 @@
             [selectionType]="'single'"
             (select)='onSelect($event)'
             [limit]="10">
-          </swui-datatable>
+          </ngx-datatable>
         </div>
         <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)' *ngSwitchCase="2"></load-stop-cards>
       </div>
