--- a/src/app/shared/components/stops-line/stops-line.component.scss
+++ b/src/app/shared/components/stops-line/stops-line.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/font-icons';
 
 .stops-container {
   position: relative;
@@ -6,7 +7,7 @@
   hr {
     position: absolute;
     width: 100%;
-    margin: 8px 0 0;
+    margin: 7px 0 0;
     border-color: $grey;
   }
 }
@@ -14,30 +15,10 @@
 .stops {
   display: flex;
   justify-content: space-between;
-}
 
-.triangle {
-  z-index: 1;
-  display: flex;
-  width: 16px;
-  height: 16px;
-  cursor: default;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  text-decoration: none;
-
-  span {
-    width: 10px;
-    height: 9px;
-    background: url('assets/img/triangle-down.png');
-    background-repeat: no-repeat;
-  }
-
-  &.bottom {
-    span {
-      transform: rotate(180deg);
-      margin-bottom: 1px;
-    }
+  .stop-icon {
+    z-index: 1;
+    background: $white;
+    font-size: 16px;
   }
 }
