fix including of datable styles to project

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 @import '../assets/styles/variables';
-@import '../../node_modules/angular2-data-table/src/components/datatable';
-@import '../../node_modules/angular2-data-table/src/themes/material';
+@import '../../node_modules/@swimlane/ngx-datatable/src/components/datatable';
+@import '../../node_modules/@swimlane/ngx-datatable/src/themes/material';
 
 body,
 html {
