--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
@@ -1,2 +1,2 @@
 
-<bd-input [placeholder]="datePlaceholder" ngbDatepicker (focusChange)="onFocusChange($event)" #datepicker="ngbDatepicker"></bd-input>
+<bd-input [placeholder]="datePlaceholder" [(ngModel)]="model" ngbDatepicker (focusChange)="onFocusChange($event)" #datepicker="ngbDatepicker"></bd-input>
