--- a/src/app/shared/components/stops-line/stops-line.component.html
+++ b/src/app/shared/components/stops-line/stops-line.component.html
@@ -1,16 +1,16 @@
 <div class="stops-container" *ngIf="stops.length">
-  <hr [style.border-color]="lineColor">
   <div class="stops">
     <div
+      *ngFor="let stop of stops"
       class="stop-icon"
-      aria-hidden="true"
       [style.color]="getColor(stop.type)"
       [style.left.px]="stop.left"
       [style.position]="stop.left ? 'absolute' : ''"
       [class.icon-dropoff]="isDropOff(stop.type)"
       [class.icon-pickup]="!isDropOff(stop.type)"
-      (click)="onStopSelect(stop)"
-      *ngFor="let stop of stops">
+      (click)="onStopSelect(stop)">
+        <stop-popover></stop-popover>
     </div>
   </div>
+  <hr [style.border-color]="lineColor">
 </div>
